# CSREnv

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
